Add citations to introduction

--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -1,4 +1,198 @@
 
+@misc{miranda_quantum_2021,
+	title = {A {Quantum} {Natural} {Language} {Processing} {Approach} to {Musical} {Intelligence}},
+	doi = {10.48550/arXiv.2111.06741},
+	publisher = {arXiv},
+	author = {Miranda, Eduardo Reck and Yeung, Richie and Pearson, Anna and Meichanetzidis, Konstantinos and Coecke, Bob},
+	month = dec,
+	year = {2021},
+	note = {arXiv:2111.06741},
+}
+
+@misc{miranda_teaching_2022,
+	title = {Teaching {Qubits} to {Sing}: {Mission} {Impossible}?},
+	doi = {10.48550/arXiv.2207.08225},
+	publisher = {arXiv},
+	author = {Miranda, Eduardo Reck and Siegelwax, Brian N.},
+	month = aug,
+	year = {2022},
+	note = {arXiv:2207.08225},
+}
+
+@misc{arya_music_2022,
+	title = {Music {Composition} {Using} {Quantum} {Annealing}},
+	doi = {10.48550/arXiv.2201.10557},
+	publisher = {arXiv},
+	author = {Arya, Ashish and Botelho, Ludmila and Cañete, Fabiola and Kapadia, Dhruvi and Salehi, Özlem},
+	month = jan,
+	year = {2022},
+	note = {arXiv:2201.10557},
+}
+
+@misc{miranda_quantum_2020,
+	title = {Quantum {Computer}: {Hello}, {Music}!},
+	doi = {10.48550/arXiv.2006.13849},
+	publisher = {arXiv},
+	author = {Miranda, Eduardo R.},
+	month = jun,
+	year = {2020},
+	note = {arXiv:2006.13849},
+}
+
+@inproceedings{wiggins_composition_1999,
+	title = {{AI} methods for algorithmic composition: A survey, a critical view and future prospects},
+	author = {G. Papadopoulos and Wiggins, {G. A.}},
+	year = {1999},
+	pages = {110--117},
+	booktitle = {Proceedings of the AISB'99 Symposium on Musical Creativity},
+	publisher = {AISB (Society for the Study of Artificial Intelligence and the Simulation of Behaviour)},
+}
+
+@book{hiller_experimental_1959,
+	title = {{Experimental} {Music}: {Composition} {With} an {Electronic} {Computer}},
+	isbn = {978-0-313-22158-3},
+	publisher = {Greenwood Press},
+	author = {Lejaren A. Hiller and Leonard M. Isaacson},
+	year = {1959},
+}
+
+@article{lovelace_sketch_1843,
+	title = {Sketch of {The} {Analytical} {Engine}},
+	url = {https://www.fourmilab.ch/babbage/sketch.html},
+	year = {1843},
+	author = {Menabrea, Luigi Federico and Lovelace, Ada},
+	journal = {Scientific Memoirs},
+	volume = {3},
+	pages = {666--731},
+	publisher = {Richard and John E. Taylor}
+}
+
+@article{unruh_maintaining_1995,
+	title = {Maintaining coherence in quantum computers},
+	volume = {51},
+	doi = {10.1103/PhysRevA.51.992},
+	number = {2},
+	journal = {Physical Review A},
+	author = {Unruh, W. G.},
+	month = feb,
+	year = {1995},
+	note = {Publisher: American Physical Society},
+	pages = {992--997},
+}
+
+@article{brooks_quantum_2023,
+	title = {Quantum computers: what are they good for?},
+	volume = {617},
+	copyright = {2023 Springer Nature Limited},
+	shorttitle = {Quantum computers},
+	doi = {10.1038/d41586-023-01692-9},
+	abstract = {For now, absolutely nothing. But researchers and firms are optimistic about the applications.},
+	number = {7962},
+	journal = {Nature},
+	author = {Brooks, Michael},
+	month = may,
+	year = {2023},
+	pages = {S1--S3},
+}
+
+@misc{mauron_challenging_2025,
+	title = {Challenging the {Quantum} {Advantage} {Frontier} with {Large}-{Scale} {Classical} {Simulations} of {Annealing} {Dynamics}},
+	doi = {10.48550/arXiv.2503.08247},
+	publisher = {arXiv},
+	author = {Mauron, Linda and Carleo, Giuseppe},
+	month = mar,
+	year = {2025},
+	note = {arXiv:2503.08247 [quant-ph]},
+}
+
+@misc{tindall_dynamics_2025,
+	title = {Dynamics of disordered quantum systems with two- and three-dimensional tensor networks},
+	doi = {10.48550/arXiv.2503.05693},
+	publisher = {arXiv},
+	author = {Tindall, Joseph and Mello, Antonio and Fishman, Matt and Stoudenmire, Miles and Sels, Dries},
+	month = mar,
+	year = {2025},
+	note = {arXiv:2503.05693 [quant-ph]},
+	keywords = {Quantum Physics},
+}
+
+@article{king_beyond_2025,
+	title = {Beyond-classical computation in quantum simulation},
+	author = {Andrew D. King  and Alberto Nocera  and Marek M. Rams  and Jacek Dziarmaga  and Roeland Wiersema  and William Bernoudy  and Jack Raymond  and Nitin Kaushal  and Niclas Heinsdorf  and Richard Harris  and Kelly Boothby  and Fabio Altomare  and Mohsen Asad  and Andrew J. Berkley  and Martin Boschnak  and Kevin Chern  and Holly Christiani  and Samantha Cibere  and Jake Connor  and Martin H. Dehn  and Rahul Deshpande  and Sara Ejtemaee  and Pau Farre  and Kelsey Hamer  and Emile Hoskinson  and Shuiyuan Huang  and Mark W. Johnson  and Samuel Kortas  and Eric Ladizinsky  and Trevor Lanting  and Tony Lai  and Ryan Li  and Allison J. R. MacDonald  and Gaelen Marsden  and Catherine C. McGeoch  and Reza Molavi  and Travis Oh  and Richard Neufeld  and Mana Norouzpour  and Joel Pasvolsky  and Patrick Poitras  and Gabriel Poulin-Lamarre  and Thomas Prescott  and Mauricio Reis  and Chris Rich  and Mohammad Samani  and Benjamin Sheldan  and Anatoly Smirnov  and Edward Sterpka  and Berta Trullas Clavera  and Nicholas Tsai  and Mark Volkmann  and Alexander M. Whiticar  and Jed D. Whittaker  and Warren Wilkinson  and Jason Yao  and T. J. Yi  and Anders W. Sandvik  and Gonzalo Alvarez  and Roger G. Melko  and Juan Carrasquilla  and Marcel Franz  and Mohammad H. Amin },
+	journal = {Science},
+	volume = {388},
+	number = {6743},
+	pages = {199-204},
+	year = {2025},
+	doi = {10.1126/science.ado6285},
+	}
+
+@misc{pednault_leveraging_2019,
+	title = {Leveraging {Secondary} {Storage} to {Simulate} {Deep} 54-qubit {Sycamore} {Circuits}},
+	doi = {10.48550/arXiv.1910.09534},
+	publisher = {arXiv},
+	author = {Pednault, Edwin and Gunnels, John A. and Nannicini, Giacomo and Horesh, Lior and Wisnieff, Robert},
+	month = oct,
+	year = {2019},
+	note = {arXiv:1910.09534 [quant-ph]},
+}
+
+@article{mccormick_race_2022,
+	title = {Race {Not} {Over} {Between} {Classical} and {Quantum} {Computers}},
+	volume = {15},
+	issn = {1943-2879},
+	doi = {10.1103/Physics.15.19},
+	language = {en},
+	journal = {Physics},
+	author = {McCormick, Katie},
+	month = feb,
+	year = {2022},
+	pages = {19},
+}
+
+@article{arute_quantum_2019,
+	title = {Quantum supremacy using a programmable superconducting processor},
+	volume = {574},
+	copyright = {2019 The Author(s), under exclusive licence to Springer Nature Limited},
+	issn = {1476-4687},
+	doi = {10.1038/s41586-019-1666-5},
+	number = {7779},
+	journal = {Nature},
+	author = {Arute, Frank and Arya, Kunal and Babbush, Ryan and Bacon, Dave and Bardin, Joseph C. and Barends, Rami and Biswas, Rupak and Boixo, Sergio and Brandao, Fernando G. S. L. and Buell, David A. and Burkett, Brian and Chen, Yu and Chen, Zijun and Chiaro, Ben and Collins, Roberto and Courtney, William and Dunsworth, Andrew and Farhi, Edward and Foxen, Brooks and Fowler, Austin and Gidney, Craig and Giustina, Marissa and Graff, Rob and Guerin, Keith and Habegger, Steve and Harrigan, Matthew P. and Hartmann, Michael J. and Ho, Alan and Hoffmann, Markus and Huang, Trent and Humble, Travis S. and Isakov, Sergei V. and Jeffrey, Evan and Jiang, Zhang and Kafri, Dvir and Kechedzhi, Kostyantyn and Kelly, Julian and Klimov, Paul V. and Knysh, Sergey and Korotkov, Alexander and Kostritsa, Fedor and Landhuis, David and Lindmark, Mike and Lucero, Erik and Lyakh, Dmitry and Mandrà, Salvatore and McClean, Jarrod R. and McEwen, Matthew and Megrant, Anthony and Mi, Xiao and Michielsen, Kristel and Mohseni, Masoud and Mutus, Josh and Naaman, Ofer and Neeley, Matthew and Neill, Charles and Niu, Murphy Yuezhen and Ostby, Eric and Petukhov, Andre and Platt, John C. and Quintana, Chris and Rieffel, Eleanor G. and Roushan, Pedram and Rubin, Nicholas C. and Sank, Daniel and Satzinger, Kevin J. and Smelyanskiy, Vadim and Sung, Kevin J. and Trevithick, Matthew D. and Vainsencher, Amit and Villalonga, Benjamin and White, Theodore and Yao, Z. Jamie and Yeh, Ping and Zalcman, Adam and Neven, Hartmut and Martinis, John M.},
+	month = oct,
+	year = {2019},
+	note = {Publisher: Nature Publishing Group},
+	keywords = {Quantum information, Quantum physics},
+	pages = {505--510},
+}
+
+@misc{preskill_supremacy_2012,
+	title = {Quantum computing and the entanglement frontier},
+	url = {http://arxiv.org/abs/1203.5813},
+	doi = {10.48550/arXiv.1203.5813},
+	urldate = {2025-04-17},
+	publisher = {arXiv},
+	author = {Preskill, John},
+	month = nov,
+	year = {2012},
+	note = {arXiv:1203.5813 [quant-ph]},
+}
+
+@article{feynman_simulating_1982,
+	title = {Simulating physics with computers},
+	volume = {21},
+	issn = {1572-9575},
+	url = {https://doi.org/10.1007/BF02650179},
+	doi = {10.1007/BF02650179},
+	number = {6},
+	urldate = {2025-04-17},
+	journal = {International Journal of Theoretical Physics},
+	author = {Feynman, Richard P.},
+	month = jun,
+	year = {1982},
+	pages = {467--488},
+}
+
 @article{khezri_customized_2022,
 	title = {Customized {Quantum} {Annealing} {Schedules}},
 	volume = {17},
